
option java_outer_classname="MessageCountCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message MessageCountCommand {
	optional int64 requestId = 1;
	optional string topicName = 2;
}